--- a/templates/Gemfile
+++ b/templates/Gemfile
@@ -6,16 +6,17 @@ git_source(:github) do |repo_name|
 end
 
 gem 'rails', '~> 5.1.4'
-gem 'pg'
+gem 'pg', '~> 0.21.0'
 gem 'puma'
 gem 'sass-rails', '~> 5.0'
 gem 'slim-rails'
 gem 'uglifier', '>= 1.3.0'
-gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
 gem 'multi_json'
 gem 'serviceworker-rails'
+gem 'rake'
+gem 'dotenv-rails'
 
 group :development, :test do
   gem 'spring'
@@ -29,7 +30,8 @@ group :development, :test do
   gem 'rubocop-rspec'
   gem 'guard-rubocop'
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-  gem 'dotenv-rails'
+  gem 'awesome_print'
+  gem 'factory_bot_rails'
   gem 'teaspoon-jasmine'
 end
 
@@ -40,6 +42,7 @@ end
 group :test do
   gem 'simplecov', require: false
   gem 'simplecov-rcov', require: false
+  gem 'database_cleaner'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
