--- a/templates/Gemfile
+++ b/templates/Gemfile
@@ -5,23 +5,26 @@ git_source(:github) do |repo_name|
   'https://github.com/#{repo_name}.git'
 end
 
-gem 'rails', '~> 5.1.4'
-gem 'pg', '~> 0.21.0'
+gem 'rails'
+gem 'pg'
+gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 gem 'puma'
-gem 'sass-rails', '~> 5.0'
 gem 'slim-rails'
-gem 'uglifier', '>= 1.3.0'
-gem 'turbolinks', '~> 5'
-gem 'jbuilder', '~> 2.5'
+gem 'uglifier'
+gem 'turbolinks'
+gem 'jbuilder'
 gem 'multi_json'
 gem 'serviceworker-rails'
 gem 'rake'
 gem 'dotenv-rails'
+gem 'graphql'
+gem 'multiverse'
+gem 'composite_primary_keys', '=11.1.0'
+gem 'lograge'
+gem 'logstash-event'
 
 group :development, :test do
-  gem 'spring'
-  gem 'spring-watcher-listen'
-  gem 'listen', '>= 3.0.5', '< 3.2'
+  gem 'listen'
   gem 'pry-rails'
   gem 'guard'
   gem 'rspec-rails'
@@ -32,7 +35,7 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'awesome_print'
   gem 'factory_bot_rails'
-  gem 'teaspoon-jasmine'
+  gem 'graphiql-rails'
 end
 
 group :development do
